@@ -1,5 +1,7 @@
 2004-12-06  Nate Nielsen <nielsen@memberwebs.com>
 
+	* src/seahorse-keyserver-results.c: 'Save As' and 'Copy' for Remote Keys
+	(bug# 157818)
 	* libseahorse/seahorse-util.c:
 	* libseahorse/seahorse-util.h:
 	* src/seahorse-key-manager.c: Rework the File Chooser code and consolidate
